--- a/enshi_wang_assignment3.html
+++ b/enshi_wang_assignment3.html
@@ -19,8 +19,8 @@
         <ul id="first-ul">
         </ul>
         
-        <button id="btn">
-        Load list items</button>
+        <!-- <button id="btn"> -->
+        <!-- Load list items</button> -->
     </div>
     <div>
         <select class ="form-control" name="" id = dropDownList></select>
